styles/main.less
/* ... */
.wrap {
  .clearfix();
}

.asset-type-imagegroup .wrap .asset-title {
  padding-top: 0;
}

.columnizer-row:nth-child(odd) .wrap {
  .populr-image-slider {
    float: left;
    margin-right: unit(@gutter-width / 2, px);  
  }
}

.columnizer-row:nth-child(even) .wrap {
  .populr-image-slider {
    float: right;
    margin-left: unit(@gutter-width / 2, px);  
  }
}

.columnizer-row-contents-imagegroup-imagegroup-imagegroup {
  .slide {
    min-height: 165px;
    overflow: hidden;
  }
}

.columnizer-row-contents-imagegroup-imagegroup-imagegroup-imagegroup {
  .slide {
    min-height: 225px;
    overflow: hidden;
  }
}

.documents, .documents li {
  list-style: none;
  padding: 0;
  margin: 0;
  &:before {
    content: "";
    display: none;
  }
}

.documents {
   margin-top: @baseline;
}

.asset-type-documentgroup.asset-size-2, .asset-type-documentgroup.asset-size-3 {
  .documents li {
    .file-icon(30px, 8px, @off-white);
    a {
      display: inline-block;
      min-height: 30px * 1.2;
      height: auto !important;
      height: 30px * 1.2;
      line-height: 30px * 1.2;
      text-decoration: none;
    }
    .file {
      position: absolute;
    }
    .filename {
      display: inline-block;
      vertical-align: middle;
      line-height: @baseline;
      padding-left: 30px + @normal-font-size;
    }
  }
}

.asset-type-documentgroup.asset-size-1 {
  .documents li {
    background: @lighter-custom-color;
    .file-icon(40px, @normal-font-size - 3px, @lighter-custom-color);
    padding: unit(@gutter-width, px);
    margin-top: @baseline;
    .border-radius(@border-radius);
    display: table;
    .box-sizing(border-box);
    width: 100%;
    color: @custom-color;
    .meta, .download {
      position: relative;
      display: table-cell;
      min-height: 40px * 1.2;
      height: auto !important;
      height: 40px * 1.2;
      line-height: 40px * 1.2;
    }
    .meta {
      width: 100%;
    }
    .download {
      white-space: nowrap;
    }
    .file {
      position: absolute;
    }
    .filename {
      display: inline-block;
      vertical-align: middle;
      line-height: @baseline;
      padding: 0 @normal-font-size 0 (40px + @normal-font-size);
    }
  }
}

// .asset-type-embedgroup .description {
//   padding-top: @baseline / 2;
// }

#populr > #image-slider-themes > .basic(@arrow-color: @off-white, @bg-color: @custom-color);


@media screen and (max-width: 905px) {
  .has-sharing #pop-links {
    margin-top: @baseline / 2;
  }

  #meta {
    position: relative;
    width: auto;
    padding: unit(@gutter-width, px);
    .box-sizing(border-box);
    & .addthis_button_facebook_like {width: auto;}
    margin-top: @baseline;
    top: auto !important;
    background: fade(@custom-color, 100%);
    .border-radius(@border-radius);
  }
  #pop-sharing > a {
    display: inline-block;
    margin-left: 25px;
    vertical-align: top;
    &:first-child {
      margin-left: 0;
    }
  }
}


@media screen and (max-width: 752px) {
  
  #populr > .mobile-reset();
  
  #pop-logo {
    .box-sizing(border-box);
    margin: 0 8px;
  }

  #pop-logo img {
    max-width: 100%;
    .box-sizing(border-box);
  }

  #main-region, #meta {
    width: auto;
    padding: unit(@gutter-width, px);
    .box-sizing(border-box);
    margin: 0 8px;
  }

  .has-logo #main-region {
    margin-top: @baseline * 3;
  }

  .has-logo.has-title #main-region {
    margin-top: 0;
  }

  #meta {margin-top: @baseline;}

  .columnizer-row {
    width: auto !important;
    margin: 0 0 0 0 !important;
  }

  .columnizer-col {
    display: block !important;
    margin: 0 0 @baseline * 3 0 !important;
  }

  .columnizer-row-contents-text {
    margin: 0 0 @baseline * 3 0 !important;
    padding: @baseline;
    .box-shadow(~'none !important');
    .columnizer-col {
      margin-bottom: 0 !important;
    }
    .border-radius(@border-radius);
  }

  .columnizer-row:first-child.columnizer-row-contents-imagegroup {
    width: 100% !important;
    margin: auto !important;
    .columnizer-col {
      .asset:after {
        display: none !important;
        // width: 100% !important;
        // margin: 0 !important;
        // .box-shadow(~'none !important');
      }
      .img {
        .border-radius(@border-radius);
      }
      .bg {
        .border-radius(@border-radius);
      }
      .text {
        position: relative !important;
        .border-radius(0 0 @border-radius @border-radius) !important;
        background: fade(@custom-color, 100%) !important;
        bottom: auto;
      }
    }
  }

  .columnizer-row:first-child .asset-type-imagegroup.asset-size-1 {
    width: 100% !important;
    margin: auto !important;
  }
}

